[tool.poetry]
name = "tdd-demo"
version = "0.1.0"
description = ""
authors = ["Chris Hunt <chris.hunt@hudl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-watcher = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
